# bigquery-view-analyzer

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/bigquery_view_analyzer/: __init__.py  analyzer.py  cli.py
src/bqva/: __init__.py  analyzer.py  cli.py  utils.py
tests/: conftest.py  test_view_analyzer.py
tests/integration/: main.tf  variables.tf
